--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <li>Implemented Random Forest and Gradient Boosting algorithms</li>
                             <li>Achieved 92% accuracy in predicting customer churn</li>
                             <li>Resulted in a 25% reduction in customer churn rate</li>
-                            <a href="https://example.com/music-databases" target="_blank">
+                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
                                 <button type="button"><b>More</b></button>
                             </a>
                         </ul>
