--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <li>Find the most senior employee by job title.</li>
                             <li>List countries with the highest number of invoice</li>
                             <li>Identify the top 3 invoice totals. And more</li>
-                            <a href="https://example.com/music-databases" target="_blank">
+                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
                                 <button type="button"><b>More</b></button>
                             </a>
                             
