--- a/index.html
+++ b/index.html
@@ -3,32 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Bhavesh Kumar - Freelance Data Analyst</title>
+    <title>Bhavesh Kumar - Data Analyst Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <h1 class="name">Contact Bhavesh Kumar</h1>
-        <h2 class="title">Freelance Data Analyst</h2>
+        <img src="https://lh3.googleusercontent.com/a/ACg8ocI1U52lFrswx4MWYVx9SHTKI9NrvFQZBIsJCtqKpzLqFeigsNw=s360-c-no" alt="Bhavesh Kumar" class="profile-image">
+        <h1 class="name">BHAVESH KUMAR</h1>
+        <h2 class="title">Data Analyst</h2>
+        <div class="social-links">
+            <a href="https://github.com/BBhaveshkumar" target="_blank" rel="noopener noreferrer" class="social-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+            </a>
+            <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+            </a>
+            <a href="mailto:mrbhaveshkumarr@gmail.com" class="social-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+            </a>
+        </div>
+        <div class="resume-download">
+            <a href="https://docs.google.com/document/d/1liBDJwfR0ojjh4Q76jvT3BifRGlNqict/edit?usp=sharing&ouid=103123259388614732906&rtpof=true&sd=true" download class="resume-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                Download Resume
+            </a>
+        </div>
     </header>
 
     <nav class="nav-menu">
         <ul class="nav-list">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="index.html#about" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="index.html#skills" class="nav-link">Skills</a></li>
-            <li class="nav-item"><a href="index.html#projects" class="nav-link">Projects</a></li>
-            <li class="nav-item"><a href="index.html#certifications" class="nav-link">Certifications</a></li>
+            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+            <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="#certifications" class="nav-link">Certifications</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 
     <div class="container">
-        <section id="contact" class="section">
-            <h2 class="section-title">Contact Me for Freelance Work</h2>
-            <p class="contact-intro">I'm available for freelance data analysis projects. Please fill out the form below to discuss your needs and how I can help.</p>
-            <div class="google-form-container">
-                <iframe src="https://docs.google.com/forms/d/e/YOUR_GOOGLE_FORM_ID/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <section id="about" class="section">
+            <h2 class="section-title">About Me</h2>
+            <p>
+                Hello! 
+                I'm <b>Bhavesh Kumar,</b> a passionate data analyst actively seeking a role where I can leverage my expertise in Excel, SQL, and Power BI to deliver impactful data insights. With a strong foundation in data analysis, I am dedicated to translating complex data into actionable strategies that drive decision-making.
+            </p>
+            <p>
+                I am enthusiastic about contributing to projects through effective visualization techniques and in-depth data analysis. My goal is to support organizations in uncovering meaningful patterns and trends, ensuring data-driven success.
+            </p>
+        </section>
+
+        <section id="skills" class="section">
+            <h2 class="section-title">Skills</h2>
+            <div class="skills-container">
+                <div class="skill-item">Data Analysis</div>
+                <div class="skill-item">MS Excel</div>
+                <div class="skill-item">SQL</div>
+                <div class="skill-item">Data Visualization</div>
+                <div class="skill-item">Power BI</div>
+            </div>
+        </section>
+
+        <section id="projects" class="section">
+            <h2 class="section-title">Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Customer Churn Prediction" class="project-image">
+                    <div class="project-info">
+                        <h3 class="project-title">Customer Churn Prediction</h3>
+                        <p class="project-description">Developed a machine learning model to predict customer churn for a telecommunications company.</p>
+                        <ul class="project-details">
+                            <li>Used Python, Pandas, and Scikit-learn for data preprocessing and model development</li>
+                            <li>Implemented Random Forest and Gradient Boosting algorithms</li>
+                            <li>Achieved 92% accuracy in predicting customer churn</li>
+                            <li>Resulted in a 25% reduction in customer churn rate</li>
+                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
+                                <button type="button"><b>More</b></button>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Sales Forecasting Dashboard" class="project-image">
+                    <div class="project-info">
+                        <h3 class="project-title">Music Databases</h3> 
+                        <p class="project-description">Analyzed a music playlist database using <b>SQL</b>, generating detailed reports on user engagement that identified trends and opportunities, leading to a 15% increase in store revenue over six months.</p>
+                        <ul class="project-details">
+                            <li>Find the most senior employee by job title.</li>
+                            <li>List countries with the highest number of invoice</li>
+                            <li>Identify the top 3 invoice totals. And more</li>
+                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
+                                <button type="button"><b>More</b></button>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://images.unsplash.com/photo-1518186285589-2f7649de83e0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Sentiment Analysis Tool" class="project-image">
+                    <div class="project-info">
+                        <h3 class="project-title">Sentiment Analysis Tool</h3>
+                        <p class="project-description">Built a sentiment analysis tool to analyze customer feedback for a large e-commerce platform.</p>
+                        <ul class="project-details">
+                            <li>Used Python, NLTK, and spaCy for natural language processing</li>
+                            <li>Implemented a BERT-based model for sentiment classification</li>
+                            <li>Achieved 89% accuracy in sentiment prediction</li>
+                            <li>Resulted in a 20% improvement in customer satisfaction scores</li>
+                            <a href="https://example.com/music-databases" target="_blank">
+                                <button type="button"><b>More</b></button>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="certifications" class="section">
+            <h2 class="section-title">Certifications</h2>
+            <div class="certifications-grid">
+                <div class="certification-card">
+                    <a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank" rel="noopener noreferrer" class="certification-link">
+                        <img src="https://images.unsplash.com/photo-1573164713714-d95e436ab8d6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Google Data Analytics" class="certification-image">
+                        <div class="certification-content">
+                            <h3>Google Data Analytics Professional Certificate</h3>
+                            <p>Coursera | 2023</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="certification-card">
+                    <a href="https://aws.amazon.com/certification/certified-data-analytics-specialty/" target="_blank" rel="noopener noreferrer" class="certification-link">
+                        <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="AWS Certified Data Analytics" class="certification-image">
+                        <div class="certification-content">
+                            <h3>AWS Certified Data Analytics - Specialty</h3>
+                            <p>Amazon Web Services | 2022</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="certification-card">
+                    <a href="https://www.tableau.com/learn/certification/desktop-specialist" target="_blank" rel="noopener noreferrer" class="certification-link">
+                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Tableau Desktop Specialist" class="certification-image">
+                        <div class="certification-content">
+                            <h3>Tableau Desktop Specialist</h3>
+                            <p>Tableau | 2021</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
     </div>
@@ -36,7 +154,8 @@
     <footer class="footer">
         <div class="social-links">
             <a href="https://github.com/BBhaveshkumar" target="_blank" rel="noopener noreferrer" class="social-link">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.
+37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
             </a>
             <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
