--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <h2 class="section-title">Contact Me for Freelance Work</h2>
             <p class="contact-intro">I'm available for freelance data analysis projects. Please fill out the form below to discuss your needs and how I can help.</p>
             <div class="google-form-container">
-                <iframe src="https://docs.google.com/forms/d/e/YOUR_GOOGLE_FORM_ID/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://forms.gle/R1YwGcN2rT85HHaQ9" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </section>
     </div>
