--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
     <header class="header">
         <img src="https://lh3.googleusercontent.com/a/ACg8ocI1U52lFrswx4MWYVx9SHTKI9NrvFQZBIsJCtqKpzLqFeigsNw=s360-c-no" alt="Bhavesh Kumar" class="profile-image">
         <h1 class="name">BHAVESH KUMAR</h1>
-        <h2 class="title">Data Analyst</h2>
+        <p class="title">Data Analyst</p>
         <div class="social-links">
             <a href="https://github.com/BBhaveshkumar" target="_blank" rel="noopener noreferrer" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                <span class="sr-only">GitHub</span>
             </a>
             <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                <span class="sr-only">LinkedIn</span>
             </a>
             <a href="mailto:mrbhaveshkumarr@gmail.com" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                <span class="sr-only">Email</span>
             </a>
         </div>
         <div class="resume-download">
-            <a href="https://docs.google.com/document/d/1liBDJwfR0ojjh4Q76jvT3BifRGlNqict/edit?usp=sharing&ouid=103123259388614732906&rtpof=true&sd=true" download class="resume-btn">
+            <a href="https://docs.google.com/document/d/1liBDJwfR0ojjh4Q76jvT3BifRGlNqict/edit?usp=sharing&ouid=103123259388614732906&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer" class="resume-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
                 Download Resume
             </a>
@@ -35,14 +38,13 @@
         <ul class="nav-list">
             <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
             <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-          <!--   <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li> -->
             <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
             <li class="nav-item"><a href="#certifications" class="nav-link">Certifications</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 
-    <div class="container">
+    <main class="container">
         <section id="about" class="section">
             <h2 class="section-title">About Me</h2>
             <p>
@@ -65,30 +67,6 @@
             </div>
         </section>
 
-       <!--  <section id="experience" class="section">
-            <h2 class="section-title">Experience</h2>
-            <div class="experience-item">
-                <h3>Senior Data Analyst</h3>
-                <p class="company">ABC Tech Solutions | January 2020 - Present</p>
-                <ul>
-                    <li>Lead a team of 5 data analysts in developing and maintaining data pipelines for real-time analytics.</li>
-                    <li>Implemented machine learning models that improved customer segmentation accuracy by 35%, resulting in a 20% increase in targeted marketing campaign effectiveness.</li>
-                    <li>Created interactive dashboards using Power BI, resulting in a 40% increase in data-driven decision making across departments.</li>
-                    <li>Optimized SQL queries and database structures, improving overall system performance by 50%.</li>
-                </ul>
-            </div>
-            <div class="experience-item">
-                <h3>Data Analyst</h3>
-                <p class="company">XYZ Data Insights | June 2017 - December 2019</p>
-                <ul>
-                    <li>Conducted statistical analyses on large datasets to identify trends and patterns in customer behavior, leading to a 15% increase in customer retention.</li>
-                    <li>Developed and maintained SQL databases, improving query efficiency by 60%.</li>
-                    <li>Created predictive models for sales forecasting, achieving 95% accuracy and helping the company reduce inventory costs by 25%.</li>
-                    <li>Collaborated with cross-functional teams to implement data-driven solutions, resulting in a 30% increase in overall operational efficiency.</li>
-                </ul>
-            </div>
-        </section> -->
-
         <section id="projects" class="section">
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
@@ -102,14 +80,14 @@
                             <li>Implemented Random Forest and Gradient Boosting algorithms</li>
                             <li>Achieved 92% accuracy in predicting customer churn</li>
                             <li>Resulted in a 25% reduction in customer churn rate</li>
-                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
-                                <button type="button"><b>More</b></button>
-                            </a>
                         </ul>
+                        <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank" rel="noopener noreferrer" class="project-link">
+                            <button type="button"><b>More</b></button>
+                        </a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Sales Forecasting Dashboard" class="project-image">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Music Databases" class="project-image">
                     <div class="project-info">
                         <h3 class="project-title">Music Databases</h3> 
                         <p class="project-description">Analyzed a music playlist database using <b>SQL</b>, generating detailed reports on user engagement that identified trends and opportunities, leading to a 15% increase in store revenue over six months.</p>
@@ -117,11 +95,10 @@
                             <li>Find the most senior employee by job title.</li>
                             <li>List countries with the highest number of invoice</li>
                             <li>Identify the top 3 invoice totals. And more</li>
-                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
-                                <button type="button"><b>More</b></button>
-                            </a>
-                            
                         </ul>
+                        <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank" rel="noopener noreferrer" class="project-link">
+                            <button type="button"><b>More</b></button>
+                        </a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -134,10 +111,10 @@
                             <li>Implemented a BERT-based model for sentiment classification</li>
                             <li>Achieved 89% accuracy in sentiment prediction</li>
                             <li>Resulted in a 20% improvement in customer satisfaction scores</li>
-                            <a href="https://example.com/music-databases" target="_blank">
-                                <button type="button"><b>More</b></button>
-                            </a>
                         </ul>
+                        <a href="https://example.com/music-databases" target="_blank" rel="noopener noreferrer" class="project-link">
+                            <button type="button"><b>More</b></button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -169,8 +146,7 @@
                         <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Tableau Desktop Specialist" class="certification-image">
                         <div class="certification-content">
                             <h3>Tableau Desktop Specialist</h3>
-                            
-<p>Tableau | 2021</p>
+                            <p>Tableau | 2021</p>
                         </div>
                     </a>
                 </div>
@@ -195,18 +171,21 @@
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
         </section>
-    </div>
+    </main>
 
     <footer class="footer">
         <div class="social-links">
             <a href="https://github.com/BBhaveshkumar" target="_blank" rel="noopener noreferrer" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                <span class="sr-only">GitHub</span>
             </a>
             <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                <span class="sr-only">LinkedIn</span>
             </a>
             <a href="mailto:mrbhaveshkumarr@gmail.com" class="social-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                <span class="sr-only">Email</span>
             </a>
         </div>
         <p>&copy; 2023 Bhavesh Kumar. All rights reserved.</p>
