--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
     <main class="container">
         <!-- Previous sections (about, skills, projects, certifications) remain unchanged -->
 
+        <section id="skills" class="section">
+            <h2 class="section-title">Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-item">Data Analysis</div>
+                <div class="skill-item">MS Excel</div>
+                <div class="skill-item">SQL</div>
+                <div class="skill-item">Data Visualization</div>
+                <div class="skill-item">Power BI</div>
+                <div class="skill-item">Python</div>
+                <div class="skill-item">Statistical Analysis</div>
+                <div class="skill-item">Data Cleaning</div>
+            </div>
+        </section>
+
+        <div class="resume-download">
+            <a href="https://docs.google.com/document/d/1liBDJwfR0ojjh4Q76jvT3BifRGlNqict/edit?usp=sharing&ouid=103123259388614732906&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer" class="btn resume-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                Resume
+            </a>
+        </div>
+
+
         <section id="contact" class="section">
             <h2 class="section-title">Contact Me</h2>
             <div class="contact-intro">
