--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
         </section>
 
-        <section id="contact" class="section">
+        <!-- <section id="contact" class="section">
             <h2 class="section-title">Contact Me</h2>
             <form class="contact-form">
                 <div class="form-group">
@@ -195,8 +195,24 @@
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
         </section>
-    </div>
+    </div> -->
 
+    <section id="contact" class="section">
+        <h2 class="section-title">Contact Me</h2>
+        <div class="contact-intro">
+            <p>I'm always open to new opportunities and collaborations. Feel free to reach out through any of the following methods:</p>
+        </div>
+        <div class="contact-options">
+            <div class="contact-card">
+                <h3>Email</h3>
+                <p>Send me an email directly</p>
+                <a href="mailto:mrbhaveshkumarr@gmail.com" class="contact-button">Email Me</a>
+            </div>
+            
+        <div class="google-form-container">
+            <h3>Or fill out this form:</h3>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdWJMZx-9Ht4Hy-Yl_Qx5Ow4Ue5Oj7Uy_aqXvXNXqRZZXRZQ/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
     <footer class="footer">
         <div class="social-links">
             <a href="https://github.com/BBhaveshkumar" target="_blank" rel="noopener noreferrer" class="social-link">
