--- a/index.html
+++ b/index.html
@@ -206,13 +206,19 @@
             <div class="contact-card">
                 <h3>Email</h3>
                 <p>Send me an email directly</p>
-                <a href="mailto:mrbhaveshkumarr@gmail.com" class="contact-button">Email Me</a>
+                <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                </a>
             </div>
             
         <div class="google-form-container">
             <h3>Or fill out this form:</h3>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdWJMZx-9Ht4Hy-Yl_Qx5Ow4Ue5Oj7Uy_aqXvXNXqRZZXRZQ/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        </div>
+            <div class="Connect me">
+                <a href="https://forms.gle/hdkkrXHukVYEHQoh7" download class="resume-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                    Connect Me
+                </a>
+            </div>
     <footer class="footer">
         <div class="social-links">
             <a href="https://github.com/BBhaveshkumar" target="_blank" rel="noopener noreferrer" class="social-link">
