--- a/index.html
+++ b/index.html
@@ -214,9 +214,13 @@
         <div class="google-form-container">
             <h3>Or fill out this form:</h3>
             <div class="Connect me">
-                <a href="https://forms.gle/hdkkrXHukVYEHQoh7" download class="resume-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                    Connect Me
+                <div class="Connect me">
+                    <a href="https://forms.gle/hdkkrXHukVYEHQoh7" download class="resume-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                        Connect Me 🌟
+                    </a>
+                </div>
+                
                 </a>
             </div>
     <footer class="footer">
