--- a/index.html
+++ b/index.html
@@ -215,9 +215,15 @@
             <h3>Or fill out this form:</h3>
             <div class="Connect me">
                 <div class="Connect me">
-                    <a href="https://forms.gle/hdkkrXHukVYEHQoh7" download class="resume-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                    <a href="https://forms.gle/hdkkrXHukVYEHQoh7" class="resume-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M10 13a5 5 0 0 1 7 0l1.5 1.5a5 5 0 0 1 0 7l-2 2a5 5 0 0 1-7 0l-1.5-1.5a5 5 0 0 1 0-7l2-2z"></path>
+                            <path d="M14 11a5 5 0 0 1-7 0L5.5 9.5a5 5 0 0 1 0-7l2-2a5 5 0 0 1 7 0L16.5 3.5a5 5 0 0 1 0 7l-2 2z"></path>
+                        </svg>
                         Connect Me 🌟
+                    </a>
+                </div>
+                
                     </a>
                 </div>
                 
