--- a/index.html
+++ b/index.html
@@ -207,8 +207,14 @@
                 <h3>Email</h3>
                 <p>Send me an email directly</p>
                 <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="2" y="2" width="20" height="20" rx="2" ry="2"></rect>
+                        <path d="M16 8v8"></path>
+                        <path d="M8 12h8"></path>
+                        <path d="M8 8v8"></path>
+                    </svg>
                 </a>
+                
             </div>
             
         <div class="google-form-container">
