--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
             <div class="contact-card">
                 <h3>Email</h3>
                 <p>Send me an email directly</p>
-                <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="2" y="2" width="20" height="20" rx="2" ry="2"></rect>
-                        <path d="M16 8v8"></path>
-                        <path d="M8 12h8"></path>
-                        <path d="M8 8v8"></path>
-                    </svg>
-                </a>
+                <div class="Connect me">
+                    <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link" style="display: inline-flex; align-items: center; justify-content: center; width: 150px; height: 40px; background-color: #f1f1f1; border-radius: 5px; text-decoration: none; color: black; font-size: 16px; font-weight: bold;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;">
+                            <rect x="2" y="2" width="20" height="20" rx="2" ry="2"></rect>
+                            <polyline points="2,6 12,13 22,6"></polyline>
+                        </svg>
+                        Gmail
+                    </a>
+                </div>
                 
-            </div>
             
         <div class="google-form-container">
             <h3>Or fill out this form:</h3>
