--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="resume-download">
             <a href="https://docs.google.com/document/d/1liBDJwfR0ojjh4Q76jvT3BifRGlNqict/edit?usp=sharing&ouid=103123259388614732906&rtpof=true&sd=true" download class="resume-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                Download Resume
+                Download Resume ❇️
             </a>
         </div>
     </header>
@@ -212,7 +212,7 @@
                                 <rect x="2" y="2" width="20" height="20" rx="2" ry="2"></rect>
                                 <polyline points="2,6 12,13 22,6"></polyline>
                             </svg>
-                            Gmail ME 🌟
+                            Gmail ME 📧
                         </a>
                     </div>
         
@@ -225,7 +225,7 @@
                             <path d="M10 13a5 5 0 0 1 7 0l1.5 1.5a5 5 0 0 1 0 7l-2 2a5 5 0 0 1-7 0l-1.5-1.5a5 5 0 0 1 0-7l2-2z"></path>
                             <path d="M14 11a5 5 0 0 1-7 0L5.5 9.5a5 5 0 0 1 0-7l2-2a5 5 0 0 1 7 0L16.5 3.5a5 5 0 0 1 0 7l-2 2z"></path>
                         </svg>
-                        Connect Me 🌟
+                        Connect Me 📝
                     </a>
                 </div>
                 
