--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="resume-download">
             <a href="https://docs.google.com/document/d/1liBDJwfR0ojjh4Q76jvT3BifRGlNqict/edit?usp=sharing&ouid=103123259388614732906&rtpof=true&sd=true" download class="resume-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                Download Resume
+                Download Resume ❇️
             </a>
         </div>
     </header>
@@ -201,18 +201,19 @@
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-intro">
             <p>I'm always open to new opportunities and collaborations. Feel free to reach out through any of the following methods:</p>
+            <p><b>Fill out this form to discuss your project with me:</b></p>
         </div>
-        <div class="contact-options">
+        <!-- <div class="contact-options">
             <div class="contact-card">
                 <h3>Email</h3>
                 <p>Send me an email directly</p>
                 <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                 </a>
-            </div>
+            </div> -->
             
         <div class="google-form-container">
-            <h3>Or fill out this form:</h3>
+            <h3>Complete this form to get in touch with me :</h3>
             <div class="Connect me">
                 <div class="Connect me">
                     <a href="https://forms.gle/hdkkrXHukVYEHQoh7" download class="resume-btn">
