--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
     <section id="contact" class="section">
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-intro">
-            <p>I'm always open to new opportunities and collaborations. Feel free to reach out through any of the following methods:</p>
-            <p><b>Fill out this form to discuss your project with me:</b></p>
+            <p>I'm always open to new opportunities and collaborations. Feel free to reach out through any of the following methods Fill out this form to discuss your project with me:</p>
         </div>
         <!-- <div class="contact-options">
             <div class="contact-card">
@@ -213,15 +212,18 @@
             </div> -->
             
         <div class="google-form-container">
+            <h3> FROM  </h3>
             <h3>Complete this form to get in touch with me :</h3>
             <div class="Connect me">
                 <div class="Connect me">
-                    <a href="https://forms.gle/hdkkrXHukVYEHQoh7" download class="resume-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                    <a href="https://forms.gle/hdkkrXHukVYEHQoh7" class="resume-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 4v16M5 11l7 7 7-7"></path>
+                        </svg>
                         Connect Me 🌟
                     </a>
                 </div>
-                
+            </div>
                 </a>
             </div>
     <footer class="footer">
