--- a/index.html
+++ b/index.html
@@ -200,19 +200,19 @@
     <section id="contact" class="section">
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-intro">
-            <p>I'm always open to new opportunities and collaborations. Feel free to reach out through any of the following methods Fill out this form to discuss your project with me:</p>
+            <p>I'm always open to new opportunities and collaborations. Feel free to reach out through any of the following methods. and  Fill out this form to discuss your project with me:</p>
         </div>
         <!-- <div class="contact-options">
             <div class="contact-card">
                 <h3>Email</h3>
                 <p>Send me an email directly</p>
-                <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link">
+                <a href="https://www.linkedin.com/in/bhaveshkumarr/" target="_blank" rel="noopener noreferrer" class="social-link"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                 </a>
             </div> -->
             
         <div class="google-form-container">
-            <h3> FROM  </h3>
+            <!-- <h3> FROM  </h3> -->
             <h3>Complete this form to get in touch with me :</h3>
             <div class="Connect me">
                 <div class="Connect me">
